<?xml version="1.0"?>
<package format="2">
  <name>unity_ros_control</name>
  <version>0.0.0</version>
  <description>The unity_ros_control package</description>

  <maintainer email="intern@todo.todo">intern</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ros_control</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>ros_control</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>control_toolbox</depend>
  <depend>controller_manager</depend>
  <depend>pluginlib</depend>
  <depend>hardware_interface</depend>
  <depend>transmission_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>urdf</depend>
  <depend>angles</depend>

</package>
